
    2.17.4: In progress...

  IMPROVED: Respond to \chk_vfo remote command (needed by some clients).
  IMPROVED: Respond to \dump_state remote command (needed by some clients).


    2.17.3: Released October 20, 2023

     FIXED: Delete key shortcut for bookmark removal.


    2.17.2: Released October 9, 2023

       NEW: FORCE_QT6 and FORCE_QT5 CMake options to force Qt version.


    2.17.1: Released October 9, 2023

       NEW: Delete key clears the waterfall.
       NEW: I/Q tool can save recordings in SigMF format.
       NEW: Holding Ctrl speeds up mouse wheel zoom.
  IMPROVED: Reduced CPU utilization of waterfall display.
   CHANGED: DMG release requires macOS 12.7 or later.


      2.17: Released October 1, 2023

       NEW: "Avg" plot mode, which displays average of FFT bins.
       NEW: "Fill" plot mode, which displays both maximum & average of FFT bins.
       NEW: "Histogram" plot mode, which displays distribution of FFT bins.
       NEW: Selectable plot scaling: dBFS, dBV/RBW, dbV/√Hz, dBm/RBW, dBm/Hz.
       NEW: Min hold line in plot.
       NEW: A/B measurement markers on plot.
       NEW: Plot tooltip displays delta from demod frequency.
       NEW: Dropped frames are indicated by red background in FFT Settings panel.
       NEW: "Avg" waterfall mode, which displays average of FFT bins.
       NEW: "Sync" waterfall mode, which mirrors averaged data from plot.
       NEW: Support for RTL-SDR Blog V4 in AppImage and DMG releases.
       NEW: Save FFT plot center frequency in settings.
  IMPROVED: Peak detection algorithm.
  IMPROVED: Peak detection uses peak hold data when available.
  IMPROVED: Maximum FFT size increased to 4M.
  IMPROVED: Maximum frame rate increased to 500.
  IMPROVED: Averaging slider is consistent across frame rates.
  IMPROVED: Visibility of text in axes.
  IMPROVED: Full support for high-DPI screens in plot & waterfall.
  IMPROVED: Plot & waterfall performance.
  IMPROVED: Plot can be zoomed & resized while DSP is stopped.