@@ -1,6 +1,7 @@
 
     2.17.4: In progress...
 
+       NEW: Experimental Windows binary release (RTL-SDR only).
   IMPROVED: Respond to \chk_vfo remote command (needed by some clients).
   IMPROVED: Respond to \dump_state remote command (needed by some clients).
 
